🚧 scorebar and chosen stars. many alignment issues still

--- a/static/css/feedback.css
+++ b/static/css/feedback.css
@@ -12,3 +12,14 @@
 
 .card.small { font-size: 40px; min-height: 100px; }
    
+.chosen::after {
+    content: "";
+    background: url('../images/stars.png');
+    /* TODO: FIXME */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index:-1;
+}
